--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blackrock",
   "version": "1.0.0",
   "description": "Blackrock hackathon Project",
+  "proxy": "http://localhost:3000",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
